@@ -1,6 +1,9 @@
 # ChangeLog for dev-java/junit
 # Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-java/junit/ChangeLog,v 1.43 2008/05/06 14:43:02 opfer Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-java/junit/ChangeLog,v 1.44 2008/05/23 19:33:41 ken69267 Exp $
+
+  23 May 2008; Kenneth Prugh <ken69267@gentoo.org> junit-3.8.2-r1.ebuild:
+  amd64 stable, bug #217448
 
   06 May 2008; Christian Faulhammer <opfer@gentoo.org>
   junit-3.8.2-r1.ebuild:
